<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="signin_empty_email">Email is empty</string>
    <string name="signin_empty_password">Password is empty</string>
    <string name="signin_invalid_email_or_password">Invalid email or password.</string>

    <string name="signin_field_email">Email</string>
    <string name="signin_field_password">Password</string>

    <string name="signin_action_sign_in">Sign In</string>
    <string name="signin_action_create_account">Create Account</string>

    <string name="signin_not_registered_yet">Not registered yet?</string>

</resources>