<?xml version="1.0" encoding="utf-8"?>
<ru.mixail_akulov.my.englishtrain.multimodule.core.presentation.views.ResultView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.signin.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:background="@color/green_dark">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="32dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="32dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageTrain"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_train"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitle_profile"
                android:text="@string/signin_action_sign_in"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_title"
                app:layout_constraintTop_toBottomOf="@+id/imageTrain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_field_input_text"
                android:hint="@string/signin_field_email"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@+id/titleFragment"
                app:layout_constraintBottom_toTopOf="@id/passwordTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    style="@style/field_input_text"
                    android:lines="1"
                    android:text="admin@google.com"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_field_input_text"
                android:hint="@string/signin_field_password"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/emailTextInput"
                app:layout_constraintBottom_toTopOf="@id/signInButton">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/field_input_text"
                    android:lines="1"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:text="123456"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                style="@style/btn_eng_positive"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:text="@string/signin_action_sign_in"
                android:layout_marginTop="@dimen/margin_next"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/passwordTextInput"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/signin_not_registered_yet"
                style="@style/text_positive"
                android:background="@null"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/signInButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                style="@style/btn_eng_negative"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/margin_next"
                app:layout_constraintStart_toStartOf="@id/leftGuideline"
                app:layout_constraintEnd_toEndOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/registered"
                android:text="@string/signin_action_create_account"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</ru.mixail_akulov.my.englishtrain.multimodule.core.presentation.views.ResultView>